# play

./: Cargo.toml  template.html
src/: ctx.rs  error.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
static/: index.html
static/css/: index.css
tests/: quick_dev.rs
