[package]
name = "play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
lazy-regex = "3.1.0"
serde = { version="1.0.193" , features=["derive"]}
serde_json = "1.0.109"
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["cors", "full"] }
tracing = { version =  "0.1.40", features = ["log"] }
tracing-subscriber = { version =  "0.3.18", default-features = false, features = ["fmt"] }

[dev-dependencies]
anyhow = "*"
httpc-test = { version = "0.1.8", features = ["color-output", "colored", "colored_json", "url"] }
